<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search_name">Поиск</string>
    <string name="library_name">Медиатека</string>
    <string name="settings_name">Настройки</string>
    <string name="dark_theme_name">Темная тема</string>
    <string name="app_share">Поделиться приложением</string>
    <string name="btn_write_support">Написать в поддержку</string>
    <string name="btn_user_license">Пользовательское соглашение</string>
    <string name="android_course_url">https://practicum.yandex.ru/android-developer/?from=catalog</string>
    <string name="my_email">evoytik@gmail.com</string>
    <string name="email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="practicum_offer">https://yandex.ru/legal/practicum_offer/</string>
    <string name="nothing_to_find">Ничего не нашлось</string>
    <string name="no_connect">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="reload">Обновить</string>
    <string name="todo">TODO</string>
    <string name="clear_history">Очистить историю</string>
    <string name="search_history">Вы искали</string>

    <string name="album_image">картинка альбома</string>
    <string name="track_name">Track Name</string>
    <string name="artist_name">Artist Name</string>
    <string name="durability">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>

    <string name="share_toast">Мессенджеры не установлены</string>
    <string name="agreement_toast">Браузеры не установлены</string>
    <string name="support_toast">Почтовые клиенты не установлены</string>

</resources>