<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/Theme.PlaylistMaker"
    style="@style/background_style"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Toolbar
        android:id="@+id/back_button"
        style="@style/ToolbarSetting"
        android:title="@string/search_name" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/searchEditText"
            style="@style/edit_text_style"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginHorizontal="16dp"
            android:autofillHints=""
            android:drawableStart="@drawable/ic_search_24"
            android:drawablePadding="8dp"
            android:hint="@string/search_name"
            android:inputType="text"
            android:maxLength="200"
            android:maxLines="1"
            android:paddingHorizontal="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/edittext_bkg"
            android:imeOptions="actionDone"
            android:singleLine="true"
            />

        <ImageButton
            android:id="@+id/clearIcon"
            style="@style/ClearIcon"
            android:src="@drawable/ic_clear_12dp"
            android:contentDescription="@string/todo"
            />

    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTrack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="vertical"
        tools:listitem="@layout/activity_track" />

    <LinearLayout
        android:id="@+id/no_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:gravity="center_horizontal"
        tools:ignore="UseCompoundDrawables">
        <ImageView
            style="@style/errors_ic_style"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_no_content"
            />
        <TextView
            style="@style/errors_text_style"
            android:text="@string/nothing_to_find"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/no_connect"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:gravity="center_horizontal"
        >
        <ImageView
            style="@style/errors_ic_style"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_no_connect"
            />
        <TextView
            style="@style/errors_text_style"
            android:text="@string/no_connect"
            />

        <Button
            android:id="@+id/btn_reload"
            style="@style/btn_reload_style"
            android:text="@string/reload"
            />
    </LinearLayout>

</LinearLayout>

