<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/background_style"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/background_style"
        tools:context=".player.ui.activity.PlayerActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp" />

        <Toolbar
            android:id="@+id/back_button"
            style="@style/ToolbarSetting"
            android:title=""
            android:navigationIcon="@drawable/ic_back_arrow_24_"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/cover"
            android:layout_width="match_parent"
            android:layout_height="312dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:contentDescription="@string/album_image"
            app:layout_constraintEnd_toEndOf="@id/rightBorder"
            app:layout_constraintStart_toStartOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/back_button"
            tools:src="@drawable/ic_placeholder_45" />

        <TextView
            android:id="@+id/track_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            style="@style/player_progress_style"
            android:text="@string/track_name"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@id/rightBorder"
            app:layout_constraintStart_toStartOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/cover" />

        <TextView
            android:id="@+id/artist_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            style="@style/player_progress_style"
            android:text="@string/artist_name"
            app:layout_constraintEnd_toEndOf="@id/rightBorder"
            app:layout_constraintStart_toStartOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/track_name" />

        <ImageButton
            android:id="@+id/common_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/color_theme"
            android:contentDescription="@string/todo"
            android:padding="0dp"
            android:src="@drawable/ic_play"
            app:layout_constraintEnd_toStartOf="@id/rightBorder"
            app:layout_constraintStart_toEndOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/artist_name" />

        <ImageButton
            android:id="@+id/button_add_to_playlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:backgroundTint="@color/color_theme"
            android:contentDescription="@string/todo"
            android:padding="0dp"
            android:src="@drawable/ic_add_to_playlist"
            app:layout_constraintBottom_toBottomOf="@id/common_button"
            app:layout_constraintStart_toEndOf="@id/leftBorder"
            app:layout_constraintTop_toTopOf="@id/common_button" />


        <ImageButton
            android:id="@+id/button_enable_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:backgroundTint="@color/color_theme"
            android:contentDescription="@string/todo"
            android:padding="0dp"
            android:src="@drawable/ic_like"
            app:layout_constraintBottom_toBottomOf="@id/common_button"
            app:layout_constraintEnd_toStartOf="@id/rightBorder"
            app:layout_constraintTop_toTopOf="@id/common_button" />

        <TextView
            android:id="@+id/progress"
            style="@style/player_progress_style"
            tools:text="05:40"
            android:text="00:00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"

            app:layout_constraintEnd_toEndOf="@id/rightBorder"
            app:layout_constraintStart_toStartOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/common_button"
            />

        <TextView
            android:id="@+id/durability"
            style="@style/player_key_style"
            android:layout_marginTop="30dp"
            android:text="@string/durability"
            app:layout_constraintTop_toBottomOf="@id/progress"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/durability_val"
            style="@style/player_val_style"
            android:layout_marginTop="30dp"
            tools:text="5:35"
            app:layout_constraintBaseline_toBaselineOf="@id/durability"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/album"
            style="@style/player_key_style"
            android:text="@string/album"
            app:layout_constraintTop_toBottomOf="@id/durability"
            app:layout_constrainedWidth="true"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/album_val"
            style="@style/player_val_style"
            tools:text="Альбом"
            app:layout_constraintBaseline_toBaselineOf="@id/album"
            app:layout_constraintHorizontal_bias="1.0"
            android:ellipsize="end"
            android:maxWidth="300dp"
            android:maxLines="1"
            app:layout_constrainedWidth="true"
            app:layout_constraintStart_toEndOf="@id/album"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/year"
            style="@style/player_key_style"
            android:text="@string/year"
            app:layout_constraintTop_toBottomOf="@id/album"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/year_val"
            style="@style/player_val_style"
            tools:text="1965"
            app:layout_constraintBaseline_toBaselineOf="@id/year"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/genre"
            style="@style/player_key_style"
            android:text="@string/genre"
            app:layout_constraintTop_toBottomOf="@id/year"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/genre_val"
            style="@style/player_val_style"
            tools:text="Rock"
            app:layout_constraintBaseline_toBaselineOf="@id/genre"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/country"
            style="@style/player_key_style"
            android:text="@string/country"
            app:layout_constraintTop_toBottomOf="@id/genre"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/country_val"
            style="@style/player_val_style"
            tools:text="Великобритания"
            app:layout_constraintBaseline_toBaselineOf="@id/country"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>