<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/pm_blue"
    android:padding="@dimen/padding_main"
    >


    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_size"
        android:textSize="@dimen/text_size"
        android:paddingLeft="@dimen/padding_main"
        android:textColor="@color/white"
        android:text="@string/app_name"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingTop="@dimen/padding_setting"
        android:paddingLeft="@dimen/padding_main"
        android:paddingRight="@dimen/padding_main"
        android:paddingBottom="@dimen/padding_main_buttom">

        <Button
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:textColor="@color/pm_black"
            android:textSize="@dimen/text_size"
            android:text="@string/search_name"
            android:textAllCaps="false"
            app:icon="@drawable/ic_search_24"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_padding"
            app:iconTint="@color/pm_black"
            app:cornerRadius="@dimen/radius_button"
            tools:ignore="NestedWeights" />


        <Button
            android:id="@+id/library"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/button_top"
            android:backgroundTint="@color/white"
            android:textColor="@color/pm_black"
            android:textSize="@dimen/text_size"
            android:text="@string/library_name"
            android:textAllCaps="false"
            app:icon="@drawable/ic_library_24"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_padding"
            app:iconTint="@color/pm_black"
            app:cornerRadius="@dimen/radius_button"
            />

        <Button
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/button_top"
            android:backgroundTint="@color/white"
            android:textColor="@color/pm_black"
            android:textSize="@dimen/text_size"
            android:text="@string/settings_name"
            android:textAllCaps="false"
            app:icon="@drawable/ic_settings_24"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_padding"
            app:iconTint="@color/pm_black"
            app:cornerRadius="@dimen/radius_button"
            />

    </LinearLayout>

</LinearLayout>