<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical">
    <Toolbar
        android:id="@+id/back_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_size"
        android:backgroundTint="@color/white"
        android:textColor="@color/pm_black"
        android:titleTextColor="@color/pm_black"
        android:navigationIcon="@drawable/ic_back_arrow_24"
        android:title="@string/settings_name"
        android:textSize="@dimen/item_settings_title_size"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/padding_setting"
        tools:ignore="UseSwitchCompatOrMaterialXml"
        android:showDividers="none"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_settings_height"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/margin_left_right_size"
            android:gravity="center_vertical"
            android:background="?attr/selectableItemBackground">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dark_theme_name"
                android:textColor="@color/black"
                android:textSize="@dimen/text_setting_size"
                android:textFontWeight="400"                />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_settings_height"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/margin_left_right_size"
            android:gravity="center_vertical"
            android:background="?attr/selectableItemBackground">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/app_share"
                android:textColor="@color/pm_black"
                android:textSize="@dimen/text_setting_size"
                android:textFontWeight="400"
                />

            <ImageButton
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="0dp"
                android:backgroundTint="@color/white"
                android:paddingRight="12dp"
                android:src="@drawable/ic_share_24"
                android:contentDescription="@string/app_share"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_settings_height"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/margin_left_right_size"
            android:gravity="center_vertical"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_write_support"
                android:textColor="@color/pm_black"
                android:textSize="@dimen/text_setting_size"
                android:textFontWeight="400"
                />

            <ImageButton
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="0dp"
                android:backgroundTint="@color/white"
                android:paddingRight="12dp"
                android:src="@drawable/ic_support_24"
                android:contentDescription="@string/btn_write_support"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_settings_height"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/margin_left_right_size"
            android:gravity="center_vertical"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_user_license"
                android:textColor="@color/pm_black"
                android:textSize="@dimen/text_setting_size"
                android:textFontWeight="400"
                />

            <ImageButton
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="0dp"
                android:backgroundTint="@color/white"
                android:paddingRight="12dp"
                android:src="@drawable/ic_forward_24"
                android:contentDescription="@string/btn_user_license"
                />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>